--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="description" content="portafolio sergio pinto diseñador web freelance  tecnologo multimedia medellin colombia  flat desing  html5  css  jquery  ">  
     <meta name="Keywords" content=" portafolio, Sergio pinto, diseñador web, freelance, diseño web, html5, diseño multimedia, paginas web, diseño web, diseno web,  website design, ">
-    <meta name="date" content="2014">
-    <meta name="copyright" content= "diseño web:sergiopinto.hol.es">
+    <meta name="date" content="2018">
+    <meta name="copyright" content= "diseño web:serpinto.github.io">
     <meta name="robots" content="all">
     <meta name="author" content="Sergio pinto Tecnologo multimedia">
      
@@ -250,13 +250,12 @@ Si usted está interesado en trabajar conmigo, me encantaría saber de usted.</p
                     <div class="footer-col col-md-4">
                         <h3>En Redes Sociales</h3>
                         <ul class="list-inline">
-                            <li><a href="https://www.facebook.com/S.andrespinto" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-facebook"></i></a>
+                            <li><a href="https://www.facebook.com/Serpinto" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li><a href="https://plus.google.com/u/0/+SergioAndresOrtizPinto/posts" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-google-plus"></i></a>
                             </li>
-                            <li><a href="https://twitter.com/SergioPinto92" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li><a href="http://www.linkedin.com/in/andrespinto92" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-linkedin"></i></a>
+                        
+                            <li><a href="https://www.linkedin.com/in/siopinto/" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             </ul>
                     </div>
