--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
                     <div class="intro-text animated rubberBand">
                         <span class="name">Diseñador web</span>
                         <hr class="star-light">
+                         <p>
+                             
+                             
+Tecnologo en Produccion Multimedia.
+Un apasionado del diseño web,estoy constantemente trabajando para mejorar mis habilidades,
+ampliar mis conocimientos y mantenerme al día con las tendencias actuales.
+Si usted está interesado en trabajar conmigo, me encantaría saber de usted.
+                         </p>
                           <div class=" page-scroll col-lg-8 col-lg-offset-2 text-center">
                   <a href="#contact"  class=" btn btn-lg btn-outline">TRABAJA CONMIGO</a>
                 </div>
