--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
         </div>
     </header>
-<!-- --------------------------------------------trabajos------------------------------------------>
+
     <section id="portfolio">
         <div class="container">
             <div class="row">
@@ -94,74 +94,70 @@
                 </div>
             </div>
             <div class="row">
-             <!-------------------------- seminario calidad ces----------->
+
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="http://uniformestws.com" class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/UniformesTWS.png" class="img-responsive" alt="seminario internacional calidad universidad CES" />
+                        <img src="img/portfolio/UniformesTWS.png" class="img-responsive" alt="sitio web uniformestws" />
                     </a>
                 </div>
-                <!------------------------------------------ fin seminario calidad ces----------------------->
-                <!------------------------------------------ postgrados psicologia ces----------------------->
+
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                    <a href="http://jorgecardonamaxilofacial.com/" class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/Postgrados-Psicologia-Universidad-Ces.png" class="img-responsive" alt="Postgrados-Psicologia-Universidad-Ces" />
+                        <img src="img/portfolio/jorgecardonamaxilofacial.png" class="img-responsive" alt="sitio web jorgecardonamaxilofacil" />
                     </a>
                 </div>
-                  <!------------------------------------------fin postgrados psicologia ces----------------------->
-                   <!------------------------------------------saeta sports ----------------------->
+
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="http://www.adventurebasecamp.co/" class="portfolio-link" >
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/Saeta.png" class="img-responsive" alt="saeta sports tecnology" />
+                        <img src="img/portfolio/adventurebasecamp.png" class="img-responsive" alt="sitio web adventurebasecamp" />
                     </a>
                 </div>
-                 <!------------------------------------------fin saeta sports ----------------------->
-                   <!------------------------------------------la granja digital  ----------------------->
+
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                    <a href="http://estudiosdeiluminacion.com.co" class="portfolio-link" >
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/La-Granja.png" class="img-responsive" alt="la granja digital" />
+                        <img src="img/portfolio/estudiosdeiluminacion.png" class="img-responsive" alt="sitio web estudiosdeiluminacion" />
                     </a>
                 </div>
-                <!------------------------------------------fin la granja digital  ----------------------->
-                <!------------------------------------------samara cosmetics  ----------------------->
+
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                    <a href="aplicacioneseingenieria.com" class="portfolio-link" >
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/samara-cosmetics.png" class="img-responsive" alt="Samara cosmetics" />
+                        <img src="img/portfolio/aplicacioneseingenieria.png" class="img-responsive" alt="sitio web aplicacioneseingenieria" />
                     </a>
                 </div>
-                  <!------------------------------------------fin samara cosmetics  ----------------------->
+
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                    <a href="http://llavespaisas.com.co/" class="portfolio-link" >
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/dharma.png" class="img-responsive" alt="dharma " />
+                        <img src="img/portfolio/PaisallavesCerrajerosasociados.png" class="img-responsive" alt="dharma " />
                     </a>
                 </div>
             </div>
@@ -246,200 +242,6 @@
 
     <!-------------------------------------------------- Portafolio ----------------------- -->
 
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>III Seminario internacional de calidad</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/III-Seminario-Internacional-de-Calidad-Universidad-CES.png" class="img-responsive img-centered" alt="">
-                            <p>Sitio Web Desarrollado para la universidad CES durante mi periodo de practica.<br><a href="http://sergiopinto.hol.es/Demos/seminario-calidad/" target="new_blank">III Seminario internacional de calidad </a>.</p>
-                            <ul class="list-inline item-details">
-                                <li>Cliente: <strong><a href="http://www.ces.edu.co/">Universidad CES</a></strong>
-                                </li>
-                                <li>Fecha: <strong><a>Julio 2013</a></strong>
-                                </li>
-                                <li>Servicio: <strong><a>Desarrollo web</a></strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Postgrados <br>PSICOLOGÍA</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/Postgrados-Psicologia-Universidad-Ces.png" class="img-responsive img-centered" alt="Postgrados-Psicologia-Universidad-Ces">
-                            <p>Sitio Web Desarrollado para la universidad CES durante mi periodo de practica <a href="http://sergiopinto.hol.es/Demos/Postgrados-psicologia-ces/" target="new_blank">Postgrados Psicologia</a>. </p>
-                             <ul class="list-inline item-details">
-                                <li>Cliente: <strong><a href="http://www.ces.edu.co/" target="new_blank">Universidad CES</a></strong>
-                                </li>
-                                <li>Fecha: <strong><a>Agosto 2013</a></strong>
-                                </li>
-                                <li>Servicio: <strong><a>Desarrollo web</a></strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Saeta Sport </h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/Saeta.png" class="img-responsive img-centered" alt="la granja digital ">
-                            <p>En colaboración con la empresa 3dementes, como parte del proyecto desarrolle las animaciones de las prendas vendidas por<a href="http://www.saetasport.com/home.php?lang=es" target="new_blank">Saeta sports</a>.</p>
-                            <ul class="list-inline item-details">
-                                <li>Cliente: <strong><a href="http://www.3dementes.com/index2.html" target="new_blank">3Dementes</a></strong>
-                                </li>
-                                <li>Fecha: <strong><a>Diciembre 2013</a></strong>
-                                </li>
-                                <li>Servicio: <strong><a>Animación HTML5 Edge Animate</a></strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>La granja Digital</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/La-Granja.png" class="img-responsive img-centered" alt="">
-                            <p> En colaboración con la empresa 3dementes, como parte del proyecto desarrolle las animaciones <br><a href="http://3dementes.com/pruebasdeprogramacion/lagranja/home.php" target="new_blank">la granja digital</a>. </p>
-                            <ul class="list-inline item-details">
-                                <li>Cliente: <strong><a  href="http://www.3dementes.com/index2.html">3Dementes</a></strong>
-                                </li>
-                                <li>Fecha: <strong><a>Diciembre  2013</a></strong>
-                                </li>
-                                <li>Servicio: <strong><a >Animación HTML5 Edge Animate</a></strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-   <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Samara Cosmetics</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/samara-cosmetics.png" class="img-responsive img-centered" alt="">
-                            <p>Samara cosmetics <a href="http://www.samaracosmetics.com/"></a>. </p>
-                            <ul class="list-inline item-details">
-                                <li>Cliente: <strong><a href="http://www.samaracosmetics.com/">Samara Cosmetics</a></strong>
-                                </li>
-                                <li>Fecha: <strong><a href="#">Agosto 2014</a></strong>
-                                </li>
-                                <li>Servicio: <strong><a href="#">Diseño Web / wordpress</a></strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-  <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Dharma </h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/dharma.png" class="img-responsive img-centered" alt="dharma">
-                            <p> <a href="http://dharma.com.co/">Dharma.com.co</a>. </p>
-                            <ul class="list-inline item-details">
-                                <li>Cliente: <strong><a href="http://startbootstrap.com">QUINDIWEB</a></strong>
-                                </li>
-                                <li>Fecha: <strong><a href="#">Octubre 2014 </a></strong>
-                                </li>
-                                <li>Servicio: <strong><a href="#">Diseño Web/Wordpress</a></strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/typeit@VERSION_NUMBER/dist/typeit.min.js" />
-    <script src="js/classie.js"></script>
-    <script src="js/cbpAnimatedHeader.min.js"></script>
-    <script src="js/freelancer.js"></script>
 
 
 </body>
