--- a/index.html
+++ b/index.html
@@ -239,10 +239,13 @@
             <i class="fa fa-chevron-up"></i>
         </a>
     </div>
-
-    <!-------------------------------------------------- Portafolio ----------------------- -->
-
-
+    <script src="js/jquery-1.10.2.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+      <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/typeit@VERSION_NUMBER/dist/typeit.min.js" />
+      <script src="js/classie.js"></script>
+      <script src="js/cbpAnimatedHeader.min.js"></script>
+      <script src="js/freelancer.js"></script>
 
 </body>
 
