--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <section id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-sm-12 col-md-12 col-lg-12 text-center">
                     <h2>ESCRIBEME</h2>
                     <hr class="star-primary">
                 </div>
@@ -189,7 +189,7 @@
                         </li>
                         </ul>
               </div>
-                <div class="col-md-8 col-lg-8 box-contact" >
+                <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 box-contact" >
                     <form role="form" action="contacto.php" method="post">
                         <div class="row">
                             <div class="form-group col-xs-12 floating-label-form-group">
