--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <meta name="description" content="portafolio sergio pinto diseñador web freelance  tecnologo multimedia medellin colombia  flat desing  html5  css  jquery  ">
     <meta name="Keywords" content=" portafolio, Sergio pinto, diseñador web, freelance, diseño web, html5, diseño multimedia, paginas web, diseño web, diseno web,  website design, ">
     <meta name="date" content="2018">
@@ -17,12 +18,14 @@
 		<link rel="shortcut icon" href="img/favicon.ico" />
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+    <!--<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">-->
     <link href="css/freelancer.css" rel="stylesheet" type="text/css">
     <link href="css/animate.css" rel="stylesheet">
 
     <!-- Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+
 <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 
 
@@ -37,31 +40,12 @@
 
 <body id="page-top" class="index">
 
-    <!-- Navegacion -->
-    <nav class="navbar navbar navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-
-            </div>
-
-
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
 
     <header>
         <div class="container">
             <div class="row">
                     <div class="col-sm-12 col-md-5 col-lg-5">
-                        <img class="img-responsive animated rubberBand" src="img/perfil.png" alt="sergio pinto profile">
+                        <img class="img-fluid animated rubberBand" src="img/perfil.png" alt="sergio pinto profile">
                     </div>
                 <div class="col-sm-12 col-md-7 col-lg-7">
 
@@ -69,7 +53,7 @@
                     <div class="intro-text animated rubberBand">
                         <span class="name">Diseñador web</span>
                         <hr class="star-light">
-                         <p class="intro-text">
+                         <p class="intro-text lead">
                            Tecnólogo en Producción Multimedia. <br>
                            Un apasionado del diseño web, estoy constantemente trabajando para mejorar mis habilidades, ampliar mis conocimientos y mantenerme al día con las tendencias actuales. <br>
                            Si usted está interesado en trabajar conmigo, me encantaría saber de usted.
@@ -99,10 +83,10 @@
                     <a href="http://uniformestws.com" class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
+                                  <i class="fas fa-eye  fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/UniformesTWS.png" class="img-responsive" alt="sitio web uniformestws" />
+                        <img src="img/portfolio/UniformesTWS.png" class="img-fluid" alt="sitio web uniformestws" />
                     </a>
                 </div>
 
@@ -110,10 +94,10 @@
                     <a href="http://jorgecardonamaxilofacial.com/" class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
+                                  <i class="fas fa-eye  fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/jorgecardonamaxilofacial.png" class="img-responsive" alt="sitio web jorgecardonamaxilofacil" />
+                        <img src="img/portfolio/jorgecardonamaxilofacial.png" class="img-fluid" alt="sitio web jorgecardonamaxilofacil" />
                     </a>
                 </div>
 
@@ -121,10 +105,10 @@
                     <a href="http://www.adventurebasecamp.co/" class="portfolio-link" >
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
+                                  <i class="fas fa-eye  fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/AdventureBaseCamp.png" class="img-responsive" alt="sitio web adventurebasecamp" />
+                        <img src="img/portfolio/AdventureBaseCamp.png" class="img-fluid" alt="sitio web adventurebasecamp" />
                     </a>
                 </div>
 
@@ -132,21 +116,22 @@
                     <a href="http://estudiosdeiluminacion.com.co" class="portfolio-link" >
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
+                                <i class="fas fa-eye  fa-3x"></i>
+
                             </div>
                         </div>
-                        <img src="img/portfolio/estudiosdeiluminacion.png" class="img-responsive" alt="sitio web estudiosdeiluminacion" />
+                        <img src="img/portfolio/estudiosdeiluminacion.png" class="img-fluid" alt="sitio web estudiosdeiluminacion" />
                     </a>
                 </div>
 
                 <div class="col-sm-4 portfolio-item">
-                    <a href="aplicacioneseingenieria.com" class="portfolio-link" >
+                    <a href="https://aplicacioneseingenieria.com/" class="portfolio-link" >
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
+                                  <i class="fas fa-eye  fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/Aplicacioneseingenieria.png" class="img-responsive" alt="sitio web aplicacioneseingenieria" />
+                        <img src="img/portfolio/Aplicacioneseingenieria.png" class="img-fluid" alt="sitio web aplicacioneseingenieria" />
                     </a>
                 </div>
 
@@ -154,10 +139,10 @@
                     <a href="http://llavespaisas.com.co/" class="portfolio-link" >
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
+                                  <i class="fas fa-eye  fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/PaisallavesCerrajerosasociados.png" class="img-responsive" alt="dharma " />
+                        <img src="img/portfolio/PaisallavesCerrajerosasociados.png" class="img-fluid" alt="dharma " />
                     </a>
                 </div>
             </div>
@@ -166,51 +151,52 @@
 
     <section id="contact">
         <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-12 text-center">
-                    <h2>ESCRIBEME</h2>
-                    <hr class="star-primary">
-                </div>
-            </div>
+            
             <div class="row">
               <div class="col-md-4 col-lg-4">
-                <h3>Datos </h3>
-                <p class="text-center">Telefono: 301-284-01-15<br>
-                Correo: s.andrespinto@gmail.com
-                    <br><a href="https://goo.gl/maps/FU2aF">Medellin,CO</a></p>
+
+                <div itemscope itemtype="http://schema.org/LocalBusiness">
+	<h2 itemprop="name">Pongamonos en contacto</h2>
+		Telefono: <span itemprop="telephone"><a href="tel:+573012840115">
+3012840115</a></span>
+</div>                Correo: s.andrespinto@gmail.com
+                    <br><a href="https://goo.gl/maps/FU2aF">Medellin,CO</a>
                     <h3>En Redes Sociales</h3>
                     <ul class="list-inline">
-                        <li><a href="https://www.facebook.com/Serpinto" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-facebook"></i></a>
+                        <li class="list-inline-item"><a href="https://www.facebook.com/Serpinto" class="btn-social btn-outline" target="_blank">
+                          <i class="fab fa-facebook-f"></i></a>
                         </li>
-                        <li><a href="https://plus.google.com/u/0/+SergioAndresOrtizPinto/posts" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-google-plus"></i></a>
+                        <li class="list-inline-item"><a href="https://plus.google.com/u/0/+SergioAndresOrtizPinto/posts" class="btn-social btn-outline" target="_blank">
+                          <i class="fab fa-google-plus-g"></i></a>
                         </li>
 
-                        <li><a href="https://www.linkedin.com/in/siopinto/" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-linkedin"></i></a>
+                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/siopinto/" class="btn-social btn-outline" target="_blank">
+                        <i class="fab fa-linkedin-in"></i></i></a>
                         </li>
                         </ul>
               </div>
                 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 box-contact" >
                     <form role="form" action="contacto.php" method="post">
-                        <div class="row">
-                            <div class="form-group col-xs-12 floating-label-form-group">
+                        <div class="row justify-content-md-center">
+                            <div class="form-group col-sm-12 col-md-12 col-lg-12  floating-label-form-group">
                                 <label for="nombre">Nombre</label>
                                 <input class="form-control" type="text" name="nombre" placeholder="Nombre" required>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="form-group col-xs-12 floating-label-form-group">
+                        <div class="row justify-content-md-center">
+                            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12  floating-label-form-group">
                                 <label for="email">Correo</label>
                                 <input class="form-control" type="email" name="email" placeholder="Correo" required>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="form-group col-xs-12 floating-label-form-group">
+                        <div class="row justify-content-md-center">
+                            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12  floating-label-form-group">
                                 <label for="message">Mensaje</label>
                                 <textarea name="mensaje" placeholder="Mensaje" class="form-control" rows="5"></textarea>
                             </div>
                         </div>
                         <br>
-                        <div class="row">
+                        <div class="row ">
                             <div class="form-group col-xs-12">
                                 <button type="submit" name="submit" class="btn btn-lg btn-success" value="enviar">Enviar</button>
                             </div>
@@ -236,13 +222,13 @@
 
     <div class="scroll-top page-scroll visible-xs visible-sm visible-lg">
         <a class="btn btn-primary" href="#page-top">
-            <i class="fa fa-chevron-up"></i>
+          <i class="fas fa-rocket"></i>
         </a>
     </div>
     <script src="js/jquery-1.10.2.js"></script>
       <script src="js/bootstrap.min.js"></script>
       <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/typeit@VERSION_NUMBER/dist/typeit.min.js" />
+      <script src="https://cdn.jsdelivr.net/npm/typeit@VERSION_NUMBER/dist/typeit.min.js" /> </script>
       <script src="js/classie.js"></script>
       <script src="js/cbpAnimatedHeader.min.js"></script>
       <script src="js/freelancer.js"></script>
