--- a/index.html
+++ b/index.html
@@ -151,15 +151,15 @@
 
     <section id="contact">
         <div class="container">
-            
+
             <div class="row">
               <div class="col-md-4 col-lg-4">
 
                 <div itemscope itemtype="http://schema.org/LocalBusiness">
 	<h2 itemprop="name">Pongamonos en contacto</h2>
-		Telefono: <span itemprop="telephone"><a href="tel:+573012840115">
-3012840115</a></span>
-</div>                Correo: s.andrespinto@gmail.com
+<h3>  <i class="fas fa-mobile-alt fa-2x"></i> <span itemprop="telephone"><a href="tel:+573012840115">
+3012840115</a></span></h3>
+</div>
                     <br><a href="https://goo.gl/maps/FU2aF">Medellin,CO</a>
                     <h3>En Redes Sociales</h3>
                     <ul class="list-inline">
@@ -176,11 +176,11 @@
                         </ul>
               </div>
                 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 box-contact" >
-                    <form role="form" action="contacto.php" method="post">
+                    <form role="form" action="https://formspree.io/s.andrespinto@gmail.com" method="post">
                         <div class="row justify-content-md-center">
                             <div class="form-group col-sm-12 col-md-12 col-lg-12  floating-label-form-group">
                                 <label for="nombre">Nombre</label>
-                                <input class="form-control" type="text" name="nombre" placeholder="Nombre" required>
+                                <input class="form-control" type="text" name="_replyto" placeholder="Nombre" required>
                             </div>
                         </div>
                         <div class="row justify-content-md-center">
@@ -198,7 +198,7 @@
                         <br>
                         <div class="row ">
                             <div class="form-group col-xs-12">
-                                <button type="submit" name="submit" class="btn btn-lg btn-success" value="enviar">Enviar</button>
+                                <button type="submit" name="submit" class="btn btn-lg btn-success" value="send">Enviar</button>
                             </div>
                         </div>
                     </form>
