--- a/index.html
+++ b/index.html
@@ -181,18 +181,19 @@
                             <div class="form-group col-sm-12 col-md-12 col-lg-12  floating-label-form-group">
                                 <label for="nombre">Nombre</label>
                                 <input class="form-control" type="text" name="_replyto" placeholder="Nombre" required>
+                                <input class="form-control" type="text" name="name" placeholder="Nombre" required>
                             </div>
                         </div>
                         <div class="row justify-content-md-center">
                             <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12  floating-label-form-group">
                                 <label for="email">Correo</label>
-                                <input class="form-control" type="email" name="email" placeholder="Correo" required>
+                                <input class="form-control" type="email" name="_replyto" placeholder="Correo" required>
                             </div>
                         </div>
                         <div class="row justify-content-md-center">
                             <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12  floating-label-form-group">
                                 <label for="message">Mensaje</label>
-                                <textarea name="mensaje" placeholder="Mensaje" class="form-control" rows="5"></textarea>
+                                <textarea name="message" placeholder="Mensaje" class="form-control" rows="5"></textarea>
                             </div>
                         </div>
                         <br>
