--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         </ul>
               </div>
                 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 box-contact" >
-                    <form role="form" action="https://formspree.io/s.andrespinto@gmail.com" method="post">
+                    <form role="form" method="post" action="https://formspree.io/s.andrespinto@gmail.com" >
                         <div class="row justify-content-md-center">
                             <div class="form-group col-sm-12 col-md-12 col-lg-12  floating-label-form-group">
                                 <label for="nombre">Nombre</label>
