--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
                             <div class="form-group col-sm-12 col-md-12 col-lg-12  floating-label-form-group">
                                 <label for="nombre">Nombre</label>
                                 <input class="form-control" type="text" name="name" placeholder="Nombre" required>
+
                             </div>
                         </div>
                         <div class="row justify-content-md-center">
@@ -198,6 +199,7 @@
                         <br>
                         <div class="row ">
                             <div class="form-group col-xs-12">
+                              <input type="hidden" name="_language" value="es" />
                                 <button type="submit" name="submit" class="btn btn-lg btn-success" value="send">Enviar</button>
                             </div>
                         </div>
